2007-07-22  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* Tomboy/SyncDialog.cs: Testing some half-baked conflict handling
	  ideas.  Will probably end up just having different process for
	  handling title conflicts (independently created notes) vs content
	  conflicts (modifications to note with same GUID).
	* Tomboy/SyncManager.cs: Cleanup, comments.  Beginning refactoring of
	  SynchronizationThread.  Some half-baked conflict handling code. 
	  More accurate note revision handling.  Only calling UploadNotes if
	  there are notes to upload.
	* Tomboy/FileSystemSyncServer.cs, Tomboy/AddinManager.cs: Comment
	  cleanup.

2007-07-17  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* Tomboy.mdp: Adding Synchronization/FuseSyncServiceAddin, removing
	  Addins/WebDavSyncService/WebDavSyncServer, and tossing in
	  references to System and Mono.Posix (if these references are
	  causing people problems, we can go ahead and remove them).
	* Tomboy/Addins/SshSyncService/SshSyncServiceAddin.cs,
	  Tomboy/Synchronization/FuseSyncServiceAddin.cs,
	  Tomboy/Synchronization, Tomboy/Makefile.am,
	  Tomboy/Addins/WebDavSyncService/WebDavSyncServiceAddin.cs:
	  Extracted abstract FuseSyncServiceAddin base class from
	  SshSyncServiceAddin and WebDavSyncServiceAddin.
	* Tomboy/Addins/WebDavSyncService/Makefile.am,
	  Tomboy/Addins/WebDavSyncService/WebDavSyncServer.cs: Not using
	  WebDavSyncServer anymore.
	* Tomboy/SyncUtils.cs: Added FindFirstExecutableInPath utility method.

2007-07-13  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* Tomboy/Addins/FileSystemSyncService/FileSystemSyncService.addin.xml,
	  Tomboy/Addins/WebDavSyncService/WebDavSyncService.addin.xml,
	  Tomboy/Addins/SshSyncService/SshSyncService.addin.xml: Setting sync
	  addins to be enabled by default, and to be in the "Synchronization"
	  category.
	* Tomboy/Addins/FileSystemSyncService/FileSystemSyncServiceAddin.cs:
	  Fixing preferences dialog behavior to match other sync addins.
